test/tests/stages/9_functions/valid/arguments_in_registers/parameter_shadows_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[38]:
  int
  identifier(a)
  (
  void
  )
  {
  return
  const int(1)
  ;
  }
  int
  identifier(b)
  (
  int
  identifier(a)
  )
  {
  return
  identifier(a)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(a)
  (
  )
  +
  identifier(b)
  (
  const int(2)
  )
  ;
  }
