test/tests/stages/9_functions/invalid_parse/trailing_comma.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[39]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  ,
  int
  identifier(c)
  )
  {
  return
  identifier(a)
  +
  identifier(b)
  +
  identifier(c)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  ,
  )
  ;
  }
